--- a/index.html
+++ b/index.html
@@ -78,32 +78,20 @@
                                     <h4>New you</h4>
                                     <h1 class="top-text">・STYLISH・</h1>
                                     <h4>NEW YORK・SINCE 2004</h4>
-                                    <div class="dflex mt-5">
-                                        <a class="aboutus me-3" href="#">About Us</a>
-                                        <a class="subscribenow" href="#">Subscribe Now</a>
-                                    </div>
                                 </div>
                             </div>
                             <div class="carousel-item carousel-2 carousel-style">
                                 <div class="carousel-caption">
-                                    <h4>New you</h4>
-                                    <h1 class="top-text">・STYLISH・</h1>
+                                    <h4>Get noticed</h4>
+                                    <h1 class="top-text">・FASHION・</h1>
                                     <h4>NEW YORK・SINCE 2004</h4>
-                                    <div class="dflex mt-5">
-                                        <a class="aboutus me-3" href="#">About Us</a>
-                                        <a class="subscribenow" href="#">Subscribe Now</a>
-                                    </div>
                                 </div>
                             </div>
                             <div class="carousel-item carousel-3 carousel-style">
                                 <div class="carousel-caption">
-                                    <h4>New you</h4>
-                                    <h1 class="top-text">・STYLISH・</h1>
+                                    <h4>Feel tree</h4>
+                                    <h1 class="top-text">・COLORS・</h1>
                                     <h4>NEW YORK・SINCE 2004</h4>
-                                    <div class="dflex mt-5">
-                                        <a class="aboutus me-3" href="#">About Us</a>
-                                        <a class="subscribenow" href="#">Subscribe Now</a>
-                                    </div>
                                 </div>
                             </div>
                             <button class="carousel-control-prev" type="button" data-bs-target="#myCarousel"
@@ -121,33 +109,109 @@
                 </div>
             </div>
         </section>
-        <section id="worginghours">
-            <div class="container-fulid"></div>
-            <div class="row">
+        <section id="workinghours">
+            <div class="container-fulid workinghours-img">
+                <div class="row">
+                    <div class="h-workinghours1 col-md-3 col-sm-10">
+                        <div class="hours-text">
+                            <h2 class="fw-workinghours">Working hours</h2>
+                        </div>
+                    </div>
+                    <div class="h-workinghours2 col-md-7 col-sm-8">
+                        <div class="hours-list hours-text">
+                            <div class="row">
+                                <div class="col-md-12">
+                            <ul>
+                                <li class="d-flex justify-content-between p-2 mt-2" style="border-bottom: 1px solid #afaaa9;">
+                                    <h4>WORKING DAYS</h4>
+                                    <p>9AM - 9PM</p>
+                                </li>
+                                <li class="d-flex justify-content-between p-2 mt-2" style="border-bottom: 1px solid #afaaa9;">
+                                    <h4>SATURDAY</h4>
+                                    <p>10AM - 8PM</p>
+                                </li>
+                                <li class="d-flex justify-content-between p-2 mt-2" style="border-bottom: 1px solid #afaaa9;">
+                                    <h4>SUNDAY</h4>
+                                    <p>CLOSED</p>
+                                </li>
+                            </ul>
+                        </div>
+                        </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </section>
         <section id="ourhow">
-            <div class="container-fulid"></div>
-            <div class="row">
+            <div class="container-fulid">
+                <div class="row">
+                    <div class="h-ourhow col-md-6 col-sm-12 p-0">
+                        <div class="h-ourhow our-img-l"></div>
+                    </div>
+                    <div class="h-ourhow col-md-6 col-sm-12 our-img-r">
+                        <div class="row">
+                            <div class="col-md-12">
+                                <div class="our-text">
+                                    <p class="text-center mb-3">NEW YORK・SINCE2004</p>
+                                    <h3 class="text-center mb-3">OUR SUCCESS SECRET</h3>
+                                    <p class="text-center mb-5 ms-5 me-5">
+                                        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-12 text-center">
+                                <div class="read-more"><a href="#" class="read-more-button">READ MORE</a></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="h-ourhow col-md-6 col-sm-12 our-img-r">
+                        <div class="row">
+                            <div class="col-md-12">
+                                <div class="our-text">
+                                    <p class="text-center mb-3">NEW YORK・SINCE2004</p>
+                                    <h3 class="text-center mb-3">HOW WE DO IT</h3>
+                                    <p class="text-center mb-5 ms-5 me-5">
+                                        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-12 text-center">
+                                <div class="read-more"><a href="#" class="read-more-button">READ MORE</a></div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="h-ourhow col-md-6 col-sm-12 p-0">
+                        <div class="h-ourhow our-img-l"></div>
+                    </div>
+                </div>
             </div>
         </section>
         <section id="countup">
-            <div class="container-fulid"></div>
-            <div class="row">
+            <div class="container-fulid">
+                <div class="row">
+                </div>
             </div>
         </section>
         <section id="cast">
-            <div class="container-fulid"></div>
-            <div class="row">
+            <div class="container-fulid">
+                <div class="row">
+                </div>
             </div>
         </section>
         <section id="newsletter">
-            <div class="container-fulid"></div>
-            <div class="row">
+            <div class="container-fulid">
+                <div class="row">
+                </div>
             </div>
         </section>
         <footer>
-            <div class="container-fuluid">
+            <div class="container-fulid">
                 <div class="row">
                 </div>
             </div>
