--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <!-- Googlefont -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Playball&display=swap" rel="stylesheet">
+    <!-- font awesome -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.2/css/all.css"
+    integrity="sha384-vSIIfh2YWi9wW0r9iZe7RJPrKwp6bG+s9QZMoITbCckVJqGCCRhc+ccxNcdpHuYu" crossorigin="anonymous">
     <!-- aos -->
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <!-- bootstrap -->
@@ -193,20 +196,130 @@
             </div>
         </section>
         <section id="countup">
-            <div class="container-fulid">
-                <div class="row">
+            <div class="container-fulid backcolor-b">
+                <div class="row pt-5 pb-5">
+                    <div class="col-lg-3 col-md-6 text-center">
+                        <span class="counter counter-num-text">125</span>
+                        <p class="counter-com-text text-white">FASHION SHOWS</p>
+                    </div>
+                    <div class="col-lg-3 col-md-6 text-center">
+                        <span class="counter counter-num-text">300</span>
+                        <p class="counter-com-text text-white">WORLDWIDE CUSTOMERS</p>
+                    </div>
+                    <div class="col-lg-3 col-md-6 text-center">
+                        <span class="counter counter-num-text">35</span>
+                        <p class="counter-com-text text-white">AWORD WINNERS</p>
+                    </div>
+                    <div class="col-lg-3 col-md-6 text-center">
+                        <span class="counter counter-num-text">145</span>
+                        <p class="counter-com-text 5text-white">DIFFRENT HAIRSTYLES</p>
+                    </div>
                 </div>
             </div>
         </section>
         <section id="cast">
-            <div class="container-fulid">
+            <div class="container-fulid mt-5 mb-5">
                 <div class="row">
+                    <div class="col-md-4">
+                        <div class="row">
+                            <div class="col-md-12">
+                                <img class="img-fluid" src="./images/sozai_1.jpg" alt="">
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-12 text-center">
+                                <p>XXXXXX XXXXXXXXXX</p>
+                            </div>
+                        </div>
+                        <div class="row mb-3">
+                            <div class="col-md-12 text-center">
+                                <span>HAIRCUTS</span>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-1 offset-4  text-center" style="border-right: solid 1px black;">
+                                <a href=""><i class="fab fa-facebook-f"></i></a>
+                            </div>
+                            <div class="col-1 text-center" style="border-right: solid 1px black;">
+                                <a href=""><i class="fab fa-twitter"></i></a>
+                            </div>
+                            <div class="col-1 text-center" style="border-right: solid 1px black;">
+                                <a href=""><i class="fab fa-instagram"></i></a>
+                            </div>
+                            <div class="col-1 text-center">
+                                <a href=""><i class="fab fa-linkedin-in"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="row">
+                            <div class="col-md-12">
+                                <img class="img-fluid" src="./images/sozai_1.jpg" alt="">
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-12 text-center">
+                                <p>XXXXXX XXXXXXXXXX</p>
+                            </div>
+                        </div>
+                        <div class="row mb-3">
+                            <div class="col-md-12 text-center">
+                                <span>HAIRCUTS</span>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-1 offset-4  text-center" style="border-right: solid 1px black;">
+                                <a href=""><i class="fab fa-facebook-f"></i></a>
+                            </div>
+                            <div class="col-1 text-center" style="border-right: solid 1px black;">
+                                <a href=""><i class="fab fa-twitter"></i></a>
+                            </div>
+                            <div class="col-1 text-center" style="border-right: solid 1px black;">
+                                <a href=""><i class="fab fa-instagram"></i></a>
+                            </div>
+                            <div class="col-1 text-center">
+                                <a href=""><i class="fab fa-linkedin-in"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="row">
+                            <div class="col-md-12">
+                                <img class="img-fluid" src="./images/sozai_1.jpg" alt="">
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-12 text-center">
+                                <p>XXXXXX XXXXXXXXXX</p>
+                            </div>
+                        </div>
+                        <div class="row mb-3">
+                            <div class="col-md-12 text-center">
+                                <span>HAIRCUTS</span>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-1 offset-4  text-center" style="border-right: solid 1px black;">
+                                <a href=""><i class="fab fa-facebook-f"></i></a>
+                            </div>
+                            <div class="col-1 text-center" style="border-right: solid 1px black;">
+                                <a href=""><i class="fab fa-twitter"></i></a>
+                            </div>
+                            <div class="col-1 text-center" style="border-right: solid 1px black;">
+                                <a href=""><i class="fab fa-instagram"></i></a>
+                            </div>
+                            <div class="col-1 text-center">
+                                <a href=""><i class="fab fa-linkedin-in"></i></a>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
-        <section id="newsletter">
-            <div class="container-fulid">
+        <section id="newsletter news-img">
+            <div class="container-fulid gray-backimg">
                 <div class="row">
+
                 </div>
             </div>
         </section>
