--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ja">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -12,7 +13,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Playball&display=swap" rel="stylesheet">
     <!-- font awesome -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.2/css/all.css"
-    integrity="sha384-vSIIfh2YWi9wW0r9iZe7RJPrKwp6bG+s9QZMoITbCckVJqGCCRhc+ccxNcdpHuYu" crossorigin="anonymous">
+        integrity="sha384-vSIIfh2YWi9wW0r9iZe7RJPrKwp6bG+s9QZMoITbCckVJqGCCRhc+ccxNcdpHuYu" crossorigin="anonymous">
     <!-- aos -->
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <!-- bootstrap -->
@@ -23,6 +24,7 @@
     <!-- favicon -->
     <link rel="shortcut icon" href="./images/favicon.ico">
 </head>
+
 <body>
     <div id="wrap">
         <header>
@@ -32,7 +34,9 @@
                         <nav class="navbar navbar-expand-lg navbar-light bg-light">
                             <div class="container-fluid">
                                 <a class="navbar-brand" href="#">Colors</a>
-                                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                                    data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown"
+                                    aria-expanded="false" aria-label="Toggle navigation">
                                     <span class="navbar-toggler-icon"></span>
                                 </button>
                                 <div class="collapse navbar-collapse flex-row-reverse me-5" id="navbarNavDropdown">
@@ -53,14 +57,17 @@
                                             <a class="nav-link" href="#">SHOP</a>
                                         </li>
                                         <li class="nav-item me-5 dropdown">
-                                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown"
+                                                role="button" data-bs-toggle="dropdown" aria-expanded="false">
                                                 ELEMENTS
                                             </a>
                                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                              <li><a class="dropdown-item" href="#">Action</a></li>
-                                              <li><a class="dropdown-item" href="#">Another action</a></li>
-                                              <li><hr class="dropdown-divider"></li>
-                                              <li><a class="dropdown-item" href="#">Something else here</a></li>
+                                                <li><a class="dropdown-item" href="#">Action</a></li>
+                                                <li><a class="dropdown-item" href="#">Another action</a></li>
+                                                <li>
+                                                    <hr class="dropdown-divider">
+                                                </li>
+                                                <li><a class="dropdown-item" href="#">Something else here</a></li>
                                             </ul>
                                         </li>
                                     </ul>
@@ -78,23 +85,23 @@
                         <div class="carousel-inner">
                             <div class="carousel-item active carousel-1 carousel-style">
                                 <div class="carousel-caption">
-                                    <h4>New you</h4>
-                                    <h1 class="top-text">・STYLISH・</h1>
-                                    <h4>NEW YORK・SINCE 2004</h4>
+                                    <h4 data-aos="fade-down">New you</h4>
+                                    <h1 class="top-text" data-aos="fade-left">・STYLISH・</h1>
+                                    <h4 data-aos="fade-up">NEW YORK・SINCE 2004</h4>
                                 </div>
                             </div>
-                            <div class="carousel-item carousel-2 carousel-style">
+                            <div class=" carousel-item carousel-2 carousel-style">
                                 <div class="carousel-caption">
-                                    <h4>Get noticed</h4>
-                                    <h1 class="top-text">・FASHION・</h1>
-                                    <h4>NEW YORK・SINCE 2004</h4>
+                                    <h4 data-aos="fade-down">Get noticed</h4>
+                                    <h1 class="top-text" data-aos="fade-left">・FASHION・</h1>
+                                    <h4 data-aos="fade-up">NEW YORK・SINCE 2004</h4>
                                 </div>
                             </div>
                             <div class="carousel-item carousel-3 carousel-style">
                                 <div class="carousel-caption">
                                     <h4>Feel tree</h4>
-                                    <h1 class="top-text">・COLORS・</h1>
-                                    <h4>NEW YORK・SINCE 2004</h4>
+                                    <h1 class="top-text" data-aos="fade-left">・COLORS・</h1>
+                                    <h4 data-aos="fade-up">NEW YORK・SINCE 2004</h4>
                                 </div>
                             </div>
                             <button class="carousel-control-prev" type="button" data-bs-target="#myCarousel"
@@ -124,22 +131,25 @@
                         <div class="hours-list hours-text">
                             <div class="row">
                                 <div class="col-md-12">
-                            <ul>
-                                <li class="d-flex justify-content-between p-2 mt-2" style="border-bottom: 1px solid #afaaa9;">
-                                    <h4>WORKING DAYS</h4>
-                                    <p>9AM - 9PM</p>
-                                </li>
-                                <li class="d-flex justify-content-between p-2 mt-2" style="border-bottom: 1px solid #afaaa9;">
-                                    <h4>SATURDAY</h4>
-                                    <p>10AM - 8PM</p>
-                                </li>
-                                <li class="d-flex justify-content-between p-2 mt-2" style="border-bottom: 1px solid #afaaa9;">
-                                    <h4>SUNDAY</h4>
-                                    <p>CLOSED</p>
-                                </li>
-                            </ul>
-                        </div>
-                        </div>
+                                    <ul>
+                                        <li class="d-flex justify-content-between p-2 mt-2"
+                                            style="border-bottom: 1px solid #afaaa9;">
+                                            <h4>WORKING DAYS</h4>
+                                            <p>9AM - 9PM</p>
+                                        </li>
+                                        <li class="d-flex justify-content-between p-2 mt-2"
+                                            style="border-bottom: 1px solid #afaaa9;">
+                                            <h4>SATURDAY</h4>
+                                            <p>10AM - 8PM</p>
+                                        </li>
+                                        <li class="d-flex justify-content-between p-2 mt-2"
+                                            style="border-bottom: 1px solid #afaaa9;">
+                                            <h4>SUNDAY</h4>
+                                            <p>CLOSED</p>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -158,7 +168,8 @@
                                     <p class="text-center mb-3">NEW YORK・SINCE2004</p>
                                     <h3 class="text-center mb-3">OUR SUCCESS SECRET</h3>
                                     <p class="text-center mb-5 ms-5 me-5">
-                                        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.
+                                        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+                                        incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.
                                     </p>
                                 </div>
                             </div>
@@ -178,7 +189,8 @@
                                     <p class="text-center mb-3">NEW YORK・SINCE2004</p>
                                     <h3 class="text-center mb-3">HOW WE DO IT</h3>
                                     <p class="text-center mb-5 ms-5 me-5">
-                                        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.
+                                        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+                                        incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.
                                     </p>
                                 </div>
                             </div>
@@ -316,10 +328,26 @@
                 </div>
             </div>
         </section>
-        <section id="newsletter news-img">
+        <section id="newsletter" class="news-img">
             <div class="container-fulid gray-backimg">
                 <div class="row">
-
+                    <div class="col-md-12 mt-5 mb-5 text-center">
+                        <span class="text-white">FOLLOW OUR WORK</span>
+                        <h1 class="text-white mt-3 mb-3">NEWSLETTER</h1>
+                        <p class="text-white">Get a shiny, satin-soft hair with the best hair products & a team of
+                            hairdressers that will</p>
+                        <p class="text-white">transform your look. Follow us!</p>
+                    </div>
+                    <form action="#" method="post" class="row">
+                        <div class="col-md-4">
+                            <label for="staticEmail2" class="visually-hidden">Email</label>
+                            <input type="email" name="youremail" class="form-control" id="staticEmail2"
+                                placeholder="Email">
+                        </div>
+                        <div class="email-submit col-md-2">
+                            <button type="submit" class="btn btn-light mb-3">SIGN UP</button>
+                        </div>
+                    </form>
                 </div>
             </div>
         </section>
@@ -330,11 +358,13 @@
             </div>
         </footer>
     </div>
-    
+
     <!-- bootstrap  -->
     <script src=".node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
     <!-- JavaScript Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
+        crossorigin="anonymous"></script>
     <!-- aos -->
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
@@ -348,4 +378,5 @@
     <!-- script.js -->
     <script src="script.js"></script>
 </body>
+
 </html>
