--- a/index.html
+++ b/index.html
@@ -79,15 +79,15 @@
             </section>
         </header>
         <section id="main">
-            <div class="container-fulid">
+            <div class="container-fluid">
                 <div class="row">
                     <div id="myCarousel" class="carousel slide" data-bs-ride="carousel">
                         <div class="carousel-inner">
                             <div class="carousel-item active carousel-1 carousel-style">
                                 <div class="carousel-caption">
-                                    <h4 data-aos="fade-down">New you</h4>
-                                    <h1 class="top-text" data-aos="fade-left">・STYLISH・</h1>
-                                    <h4 data-aos="fade-up">NEW YORK・SINCE 2004</h4>
+                                    <h4 data-aos="fade-down" data-aos-delay="300">New you</h4>
+                                    <h1 class="top-text" data-aos="fade-left" data-aos-delay="300">・STYLISH・</h1>
+                                    <h4 data-aos="fade-up" data-aos-delay="300">NEW YORK・SINCE 2004</h4>
                                 </div>
                             </div>
                             <div class=" carousel-item carousel-2 carousel-style">
@@ -120,7 +120,7 @@
             </div>
         </section>
         <section id="workinghours">
-            <div class="container-fulid workinghours-img">
+            <div class="container-fluid workinghours-img">
                 <div class="row">
                     <div class="h-workinghours1 col-md-3 col-sm-10">
                         <div class="hours-text">
@@ -156,7 +156,7 @@
             </div>
         </section>
         <section id="ourhow">
-            <div class="container-fulid">
+            <div class="container-fluid">
                 <div class="row">
                     <div class="h-ourhow col-md-6 col-sm-12 p-0">
                         <div class="h-ourhow our-img-l"></div>
@@ -208,7 +208,7 @@
             </div>
         </section>
         <section id="countup">
-            <div class="container-fulid backcolor-b">
+            <div class="container-fluid backcolor-b d-flex align-items-center justify-content-center">
                 <div class="row pt-5 pb-5">
                     <div class="col-lg-3 col-md-6 text-center">
                         <span class="counter counter-num-text">125</span>
@@ -224,13 +224,13 @@
                     </div>
                     <div class="col-lg-3 col-md-6 text-center">
                         <span class="counter counter-num-text">145</span>
-                        <p class="counter-com-text 5text-white">DIFFRENT HAIRSTYLES</p>
+                        <p class="counter-com-text text-white">DIFFRENT HAIRSTYLES</p>
                     </div>
                 </div>
             </div>
         </section>
         <section id="cast">
-            <div class="container-fulid mt-5 mb-5">
+            <div class="container-fluid mt-5 mb-5">
                 <div class="row">
                     <div class="col-md-4">
                         <div class="row">
@@ -329,7 +329,7 @@
             </div>
         </section>
         <section id="newsletter" class="news-img">
-            <div class="container-fulid gray-backimg">
+            <div class="container-fluid gray-backimg">
                 <div class="row">
                     <div class="col-md-12 mt-5 mb-5 text-center">
                         <span class="text-white">FOLLOW OUR WORK</span>
@@ -352,8 +352,99 @@
             </div>
         </section>
         <footer>
-            <div class="container-fulid">
+            <div class="container-fluid" style="background-color:black; color:white;">
+                <div class="row ms-5 me-5">
+                    <div class="col-lg-3 col-md-6 mt-5 mb-5">
+                        <div class="row">
+                            <div class="col-md-12">
+                                <h5>COLORS</h5>
+                                <div class="white-line mb-2" style="border-bottom: solid white 1px;"></div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-12">
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed
+                                    eiusmod tempor
+                                    incididunt. Ut</p>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-1 offset-3  pe-4 text-center" style="border-right: solid 1px white;">
+                                <a href=""><i class="fab fa-facebook-f" style="color:white;"></i></a>
+                            </div>
+                            <div class="col-1 text-center pe-4" style="border-right: solid 1px white;">
+                                <a href=""><i class="fab fa-twitter" style="color:white;"></i></a>
+                            </div>
+                            <div class="col-1 text-center pe-4" style="border-right: solid 1px white;">
+                                <a href=""><i class="fab fa-instagram" style="color:white;"></i></a>
+                            </div>
+                            <div class="col-1 text-center pe-4">
+                                <a href=""><i class="fab fa-linkedin-in" style="color:white;"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6 mt-5 mb-5">
+                        <div class="row">
+                            <div class="col-md-12">
+                                <h5>CONTACT</h5>
+                                <div class="white-line mb-2" style="border-bottom: solid white 1px;"></div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-12">
+                                <p>xxxxxxxxxxxxxxxxxx</p>
+                                <p>xxx@xxxx.com</p>
+                                <p>xx-xxxx-xxxx</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6 mt-5 mb-5">
+                        <div class="row">
+                            <div class="col-md-12">
+                                <h5>INFO</h5>
+                                <div class="white-line mb-2" style="border-bottom: solid white 1px;"></div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-12">
+                                <ul>
+                                    <li class=" d-flex justify-content-between">
+                                        <span>Working Days</span>
+                                        <span>10AM - 8PM</span>
+
+                                    </li>
+                                    <li class=" d-flex justify-content-between">
+                                        <span>Saturday</span>
+                                        <span>10AM - 8PM</span>
+                                    </li>
+                                    <li class=" d-flex justify-content-between">
+                                        <span>Sunday</span>
+                                        <span>closed</span>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6 mt-5 mb-5">
+                        <div class="row">
+                            <div class="col-md-12">
+                                <h5>MAPS</h5>
+                                <div class="white-line mb-2" style="border-bottom: solid white 1px;"></div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-12">
+                                <div id="map" style="height: 200px; width: 100%;"></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="container-fluid" style="background-color:#141414; color:white;">
                 <div class="row">
+                    <div class="col-md-12 mt-3 mb-3">
+                        <p class="text-center mb-0">© 2021 XXXXXXX XXXXXX</p>
+                    </div>
                 </div>
             </div>
         </footer>
@@ -377,6 +468,25 @@
     <script src="jquery.counterup.min.js" defer></script>
     <!-- script.js -->
     <script src="script.js"></script>
+    <!-- googlemap  -->
+    <script
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCOe4IlPm4VSZ8i2dgPo6cIdVucqujBJbA&callback=shojiMap&libraries=&v=weekly"
+        defer></script>
+    <script>
+        let map;
+        function shojiMap() {
+            map = new google.maps.Map(document.getElementById('map'), {
+                center: { lat: -34.397, lng: 150.644 },
+                zoom: 16,
+            });
+            const marker = new google.maps.Marker({
+                // The below line is equivalent to writing:
+                // position: new google.maps.LatLng(-34.397, 150.644)
+                position: { lat: -34.397, lng: 150.644 },
+                map: map,
+            });
+        }
+    </script>
 </body>
 
 </html>
